# making-embedded-systems

./: CMakeLists.txt  README.md  app.overlay  prj.conf
homework/week_3/blinky/: README.md
homework/week_3/blinky/src/display/include/: Display.h
homework/week_3/blinky/src/display/src/: CMakeLists.txt  Display.cpp
homework/week_5/command-rs/: Cargo.toml  README.md
homework/week_5/command-rs/.cargo/: config.toml
homework/week_8/: .gitignore  Cargo.toml  README.md  mapfile.map
homework/week_8/.cargo/: config.toml
microbit-template/: Cargo.toml
microbit-template/src/: lib.rs
src/: CMakeLists.txt
src/blinky/: CMakeLists.txt
src/blinky/src/: CMakeLists.txt  main.cpp
src/display/: CMakeLists.txt
src/display/include/: CMakeLists.txt
src/display/src/: Display.cpp
